# sneil_chatbot

./: .coverage  .gitignore  GAP_ANALYSIS.md  Makefile  README.md  TESTING.md  main.py  pyproject.toml
adapters/whatsapp_baileys/: package-lock.json  package.json
app/: graph.py  graph_routes.py  graph_utils.py  main.py  types.py  utils.py
app/core/: graph.py  graph_routes.py  graph_utils.py  llm_client.py  llm_provider.py  logging_config.py  persistence.py  utils.py
app/interfaces/: api_test_route_subgraph.py  chatbot_ui_mockup.html  chatbot_ui_mockupPPP.html  chatbot_ui_mockup__w_statey.html  chatbot_ui_mockup_helpers.py  cli.py  dev_api.py  whatsapp_webhook.py
app/nodes/: phase_nodes.py  product_subgraph.py  rag.py  route_subgraph.py  router.py  user_intent_classifier.py  user_intent_router.py
app/prompts/: builders.py  classifier.md  classifier_v0.md  prompt_utils.py
app/tools/: catalog_tool.py
config/: products.yaml  routes.yaml
knowledge/AA/: ENVIO E INSTALACION .docx  HDK 2200.docx  HDK 2800.docx  HDK 3300.docx
knowledge/TPMS/: Informacion general de TPMS .docx  PROBLEMAS FRECUENTES Y RESPUESTAS CLAVE.docx
scripts/: build_indexes.py  hub_classifier__smoke_test.py  ingest_raw_catalog.ipynb  rag_test.ipynb  route_subgraph__smoke_test.py  test_catalog.ipynb  test_high_level_flow.py
tests/: conftest.py  run__catalog__test.ipynb  run__node_or_graph__test.py  run_test.py  scenario_helpers.py  test__node_clarify.scenarios.json  test__node_classifier.py  test__node_classifier.scenarios.json  test__node_handoff.scenarios.json  test__node_route_classifier.scenarios.json  test__node_subgraph__clarify.scenarios.json  test__node_subgraph__generate.scenarios copy 3.json  test__node_subgraph__generate.scenarios.json  test__node_subgraph__generate_tool_router.scenarios.json  test__node_subgraph__handoff.scenarios copy.json  test__node_subgraph__handoff.scenarios.json  test__node_subgraph__retrieve.scenarios.json  test__route_subgraph.py  test__route_subgraph.scenarios.json  test_hub_classifier.py  test_rag.ipynb  utility_to_run_scenarios.py
tests/integration/: conftest.py  test_clarify_node.py  test_classifier_node.py  test_dev_api.py  test_handler_nodes.py  (+2 more)
(+62 files in other folders)
