[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sneil-chatbot"
version = "0.1.0"
description = "Neil chatbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "camelot-py>=0.11.0",
  "chromadb>=1.4.1",
  "docx2txt>=0.9",
  "fastapi>=0.128.0",
  "langchain>=1.2.7",
  "langchain-chroma>=1.1.0",
  "langchain-community>=0.4.1",
  "langchain-openai>=1.1.7",
  "langchain-text-splitters>=1.1.0",
  "langgraph>=1.0.7",
  "langgraph-checkpoint-sqlite>=3.0.3",
  "openai>=1.3.0",
  "openpyxl>=3.1.5",
  "pandas>=3.0.0",
  "pydantic>=2.12.5",
  "pypdf>=6.6.2",
  "python-docx>=1.2.0",
  "python-dotenv>=1.2.1",
  "pyyaml>=6.0.3",
  "tenacity>=8.2.3",
  "uvicorn>=0.40.0",
]

[project.scripts]
chatbot = "app.interfaces.cli:run_chatbot"
chatbot-api = "app.interfaces.dev_api:main"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "pytest-sugar>=1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "knowledge*", "config*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
  "unit: pure Python, no LLM, no I/O",
  "integration: node-level, may call LLM",
  "e2e: full graph, multi-turn",
  "no_llm: scenario uses only heuristics — safe offline",
  "llm: scenario requires a real OpenAI call",
]

# to run the app run dev_api.py
# then, to share the running app over web using ngrok  run in a terminal:
# ngrok http 8000